[package]
name = "simple-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=["object"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
incremental = false
debug = true

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dependencies]
futures = "*"

[dev-dependencies]
trybuild = "1.0"

# [dev-dependencies.async-std]
# version = "1.2"
# features = ["attributes"]

[dependencies.object]
path="./object"